--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
     "ng": "nx",
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2020 browser module main",
     "start": "nx serve",
+    "start:front": "npx nx serve",
+    "start:api": "npx nx serve api",
+    "dev": "concurrently -p=\"{name}\" -n=\"Angular,NestJS\" -c=\"green,blue\" \"npm run start:front\" \"npm run start:api\"",
     "build": "nx build",
-    "test": "nx test"
+    "test": "nx test",
+    "serve": "node dist/apps/api/main.js"
   },
   "private": true,
   "dependencies": {
@@ -28,9 +32,12 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/serve-static": "^3.0.0",
     "@nrwl/angular": "14.7.0",
     "@popperjs/core": "^2.10.2",
+    "@prisma/client": "^4.3.1",
     "@schematics/angular": "^14.2.3",
+    "bcrypt": "^5.0.1",
     "bootstrap": "^5.2.0",
     "ngx-bootstrap": "^9.0.0",
     "reflect-metadata": "^0.1.13",
@@ -61,6 +68,7 @@
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "~5.33.1",
     "@typescript-eslint/parser": "~5.33.1",
+    "concurrently": "^7.4.0",
     "cypress": "^10.7.0",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
@@ -70,6 +78,7 @@
     "jest-preset-angular": "~12.2.0",
     "nx": "14.7.0",
     "prettier": "^2.6.2",
+    "prisma": "^4.3.1",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
     "typescript": "~4.7.2"
