Remove unused controllers, add authentication, add database, add user functions

--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "@fortawesome/free-brands-svg-icons": "^6.2.0",
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/jwt": "^9.0.0",
+    "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/serve-static": "^3.0.0",
     "@nrwl/angular": "14.7.0",
@@ -39,7 +42,13 @@
     "@schematics/angular": "^14.2.3",
     "bcrypt": "^5.0.1",
     "bootstrap": "^5.2.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
+    "cookie-parser": "^1.4.6",
     "ngx-bootstrap": "^9.0.0",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
@@ -64,8 +73,12 @@
     "@nrwl/node": "14.7.0",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/workspace": "14.7.0",
+    "@types/cookie-parser": "^1.4.3",
+    "@types/express": "^4.17.14",
     "@types/jest": "28.1.1",
     "@types/node": "16.11.7",
+    "@types/passport-jwt": "^3.0.6",
+    "@types/passport-local": "^1.0.34",
     "@typescript-eslint/eslint-plugin": "~5.33.1",
     "@typescript-eslint/parser": "~5.33.1",
     "concurrently": "^7.4.0",
