Add login functionality, logout, add cookie validation

--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "@angular/platform-browser-dynamic": "~14.2.0",
     "@angular/router": "~14.2.0",
     "@fortawesome/angular-fontawesome": "^0.11.1",
-    "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-brands-svg-icons": "^6.2.0",
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@nestjs/common": "^9.0.0",
@@ -46,6 +45,7 @@
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
     "ngx-bootstrap": "^9.0.0",
+    "ngx-cookie": "^6.0.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
