--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "license": "MIT",
   "scripts": {
     "ng": "nx",
-    "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2020 browser module main",
     "start": "nx serve",
     "start:front": "npx nx serve",
     "start:api": "npx nx serve api",
+    "generate": "npx prisma generate",
     "dev": "concurrently -p=\"{name}\" -n=\"Angular,NestJS\" -c=\"green,blue\" \"npm run start:front\" \"npm run start:api\"",
-    "build": "nx build",
+    "build": "npx nx build --outputPath=\"dist\"",
     "test": "nx test",
     "serve": "node dist/apps/api/main.js"
   },
@@ -53,7 +53,9 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "prisma": "^4.3.1",
+    "typescript": "~4.7.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~14.2.0",
@@ -92,9 +94,7 @@
     "jest-preset-angular": "~12.2.0",
     "nx": "14.7.0",
     "prettier": "^2.6.2",
-    "prisma": "^4.3.1",
     "ts-jest": "28.0.5",
-    "ts-node": "10.9.1",
-    "typescript": "~4.7.2"
+    "ts-node": "10.9.1"
   }
 }
