--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start:api": "npx nx serve api",
     "generate": "npx prisma generate",
     "dev": "concurrently -p=\"{name}\" -n=\"Angular,NestJS\" -c=\"green,blue\" \"npm run start:front\" \"npm run start:api\"",
-    "build": "npx nx build --outputPath=\"dist\"",
+    "build": "npx nx run-many --target=build --projects=front,api",
     "test": "nx test",
     "serve": "node dist/apps/api/main.js"
   },
@@ -25,6 +25,8 @@
     "@angular/platform-browser": "~14.2.0",
     "@angular/platform-browser-dynamic": "~14.2.0",
     "@angular/router": "~14.2.0",
+    "@angular/compiler-cli": "~14.2.0",
+    "@angular-devkit/build-angular": "~14.2.0",
     "@fortawesome/angular-fontawesome": "^0.11.1",
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-brands-svg-icons": "^6.2.0",
@@ -37,6 +39,8 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/serve-static": "^3.0.0",
     "@nrwl/angular": "14.7.0",
+    "@nrwl/nx-cloud": "^14.7.0",
+    "@nrwl/node": "14.7.0",
     "@popperjs/core": "^2.10.2",
     "@prisma/client": "^4.3.1",
     "@schematics/angular": "^14.2.3",
@@ -59,12 +63,10 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~14.2.0",
     "@angular-eslint/eslint-plugin": "~14.0.0",
     "@angular-eslint/eslint-plugin-template": "~14.0.0",
     "@angular-eslint/template-parser": "~14.0.0",
     "@angular/cli": "~14.2.0",
-    "@angular/compiler-cli": "~14.2.0",
     "@angular/language-service": "~14.2.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
@@ -74,8 +76,6 @@
     "@nrwl/jest": "14.7.0",
     "@nrwl/linter": "14.7.0",
     "@nrwl/nest": "14.7.0",
-    "@nrwl/node": "14.7.0",
-    "@nrwl/nx-cloud": "latest",
     "@nrwl/workspace": "14.7.0",
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.14",
