Add new icons, additional work on set page

--- a/package.json
+++ b/package.json
@@ -15,22 +15,23 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "~14.2.0",
     "@angular/animations": "~14.2.0",
     "@angular/cdk": "^14.2.2",
     "@angular/common": "~14.2.0",
     "@angular/compiler": "~14.2.0",
+    "@angular/compiler-cli": "~14.2.0",
     "@angular/core": "~14.2.0",
     "@angular/forms": "~14.2.0",
     "@angular/localize": "~14.2.0",
     "@angular/platform-browser": "~14.2.0",
     "@angular/platform-browser-dynamic": "~14.2.0",
     "@angular/router": "~14.2.0",
-    "@angular/compiler-cli": "~14.2.0",
-    "@angular-devkit/build-angular": "~14.2.0",
     "@fortawesome/angular-fontawesome": "^0.11.1",
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-brands-svg-icons": "^6.2.0",
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
@@ -39,8 +40,8 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/serve-static": "^3.0.0",
     "@nrwl/angular": "14.7.0",
-    "@nrwl/nx-cloud": "^14.7.0",
     "@nrwl/node": "14.7.0",
+    "@nrwl/nx-cloud": "^14.7.0",
     "@popperjs/core": "^2.10.2",
     "@prisma/client": "^4.3.1",
     "@schematics/angular": "^14.2.3",
