--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.2.0",
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@nestjs-modules/mailer": "^1.8.1",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
@@ -53,6 +54,7 @@
     "jwt-decode": "^3.1.2",
     "ngx-bootstrap": "^9.0.0",
     "ngx-cookie": "^6.0.1",
+    "nodemailer": "^6.8.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
@@ -82,6 +84,7 @@
     "@types/express": "^4.17.14",
     "@types/jest": "28.1.1",
     "@types/node": "16.11.7",
+    "@types/nodemailer": "^6.4.6",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
     "@typescript-eslint/eslint-plugin": "~5.33.1",
