Add recaptcha to email

--- a/compose.yml
+++ b/compose.yml
@@ -15,6 +15,10 @@ services:
     environment:
       - "DATABASE_URL=mysql://root:${DB_PASSWORD}@db:3306/scholarsome"
       - "JWT_TOKEN=${JWT_TOKEN}"
+      - "SMTP_HOST=${SMTP_HOST}"
+      - "SMTP_PORT=${SMTP_PORT}"
+      - "SMTP_USERNAME=${SMTP_USERNAME}"
+      - "SMTP_PASSWORD=${SMTP_PASSWORD}"
     depends_on:
       - "db"
     restart: always
