--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@nestjs-modules/mailer": "^1.8.1",
+    "@nestjs/axios": "^0.1.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
@@ -40,6 +41,7 @@
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/serve-static": "^3.0.0",
+    "@nestjs/throttler": "^3.1.0",
     "@nrwl/angular": "14.7.0",
     "@nrwl/node": "14.7.0",
     "@nrwl/nx-cloud": "^14.7.0",
@@ -52,6 +54,7 @@
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
     "jwt-decode": "^3.1.2",
+    "ng-recaptcha": "^10.0.0",
     "ngx-bootstrap": "^9.0.0",
     "ngx-cookie": "^6.0.1",
     "nodemailer": "^6.8.0",
