Add SSL server, add verification email link, add verification modal open

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,12 @@ SMTP_HOST=
 SMTP_PORT=
 SMTP_USERNAME=
 SMTP_PASSWORD=
-SMTP_SECURE=
 
+HTTP_PORT=
+HOST=
+
+SSL_KEY_PATH=
+SSL_CERT_PATH=
+
+RECAPTCHA_SITE=
 RECAPTCHA_SECRET=
