--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
+    "express": "^4.18.2",
     "jwt-decode": "^3.1.2",
     "ng-recaptcha": "^10.0.0",
     "ngx-bootstrap": "^9.0.0",
