Change email auth to be optional, add recaptcha client key to angular, add full env list to compose and image

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,42 @@
+# Required
+# Either production or development - use production if you're not contributing
+NODE_ENV=production
+
+# Required if using compose
+# Password to provide for internal database
+DATABASE_PASSWORD=
+
+# Required if using standalone container
+# Complete connection URI to MariaDB
 DATABASE_URL=
 
+# Required
+# Password used to validate all private tokens
 JWT_TOKEN=
 
+# Required
+# Port to expose Scholarsome on
+HTTP_PORT=
+
+
+# ---
+# Everything past this line is optional
+# ---
+
+
+# Self-explanatory SMTP fields
 SMTP_HOST=
 SMTP_PORT=
 SMTP_USERNAME=
 SMTP_PASSWORD=
 
-HTTP_PORT=
+# Domain to use in emails - do not include http
 HOST=
 
+# Path to SSL key and cert
 SSL_KEY_PATH=
 SSL_CERT_PATH=
 
+# Recaptcha site key and secret key
 RECAPTCHA_SITE=
 RECAPTCHA_SECRET=
