--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "license": "MIT",
   "scripts": {
     "ng": "nx",
-    "start": "nx serve",
-    "start:front": "npx nx serve --host=0.0.0.0",
-    "start:api": "npx nx serve api",
     "generate": "npx prisma generate",
     "migrate": "npx prisma migrate deploy",
     "dev": "concurrently -p=\"{name}\" -n=\"Angular,NestJS\" -c=\"green,blue\" \"npm run start:front\" \"npm run start:api\"",
     "build": "npx nx run-many --target=build --projects=front,api && node tools/setAngularEnv.js",
     "test": "nx test",
+    "lint": "nx run-many --all --target=lint --fix",
+    "start": "nx serve",
+    "start:front": "npx nx serve --host=0.0.0.0",
+    "start:api": "npx nx serve api",
     "serve:node": "npm run migrate && node tools/setAngularEnv.js && node dist/apps/api/main.js",
     "serve:pm2": "npm run migrate && node tools/setAngularEnv.js && pm2 start dist/apps/api/main.js --name \"scholarsome\""
   },
