Modify set author button, close header on mobile when link clicked, use updated packages

--- a/package.json
+++ b/package.json
@@ -40,12 +40,12 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
-    "@nestjs/jwt": "^9.0.0",
+    "@nestjs/jwt": "^10.0.2",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/serve-static": "^3.0.0",
     "@nestjs/throttler": "^3.1.0",
-    "@nrwl/angular": "14.7.0",
+    "@nrwl/angular": "^15.8.6",
     "@nrwl/node": "14.7.0",
     "@nrwl/nx-cloud": "^14.7.0",
     "@popperjs/core": "^2.10.2",
@@ -54,13 +54,14 @@
     "bcrypt": "^5.0.1",
     "bootstrap": "^5.2.0",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.13.2",
+    "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "jwt-decode": "^3.1.2",
     "ng-recaptcha": "^10.0.0",
     "ngx-bootstrap": "^9.0.0",
     "ngx-cookie": "^6.0.1",
+    "ngx-device-detector": "^5.0.1",
     "nodemailer": "^6.8.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
