Add Redis connection

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,3 @@
-# Required
 # Either production or development - use production if you're not contributing
 NODE_ENV=production
 
@@ -6,18 +5,20 @@ NODE_ENV=production
 # Password to provide for internal database
 DATABASE_PASSWORD=
 
-# Required if using standalone container
 # Complete connection URI to MariaDB
 DATABASE_URL=
 
-# Required
 # Password used to validate all private tokens
 JWT_TOKEN=
 
-# Required
 # Port to expose Scholarsome on
 HTTP_PORT=
 
+# Redis server details
+REDIS_HOST=
+REDIS_PORT=
+REDIS_USERNAME=
+REDIS_PASSWORD=
 
 # ---
 # Everything past this line is optional
