--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
+    "ioredis": "^5.3.1",
     "jwt-decode": "^3.1.2",
     "ng-recaptcha": "^10.0.0",
     "ngx-bootstrap": "^9.0.0",
