--- a/.env.example
+++ b/.env.example
@@ -34,9 +34,9 @@ SMTP_PASSWORD=
 # Domain to use in emails - do not include http
 HOST=
 
-# Path to SSL key and cert
-SSL_KEY_PATH=
-SSL_CERT_PATH=
+# SSL key and cert encoded as base64
+SSL_KEY_BASE64=
+SSL_CERT_BASE64=
 
 # Recaptcha site key and secret key
 RECAPTCHA_SITE=
