--- a/package.json
+++ b/package.json
@@ -46,9 +46,9 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/serve-static": "^3.0.0",
     "@nestjs/throttler": "^3.1.0",
-    "@nrwl/angular": "^15.8.6",
-    "@nrwl/node": "14.7.0",
-    "@nrwl/nx-cloud": "^14.7.0",
+    "@nrwl/angular": "15.9.2",
+    "@nrwl/node": "15.9.2",
+    "@nrwl/nx-cloud": "15.3.5",
     "@popperjs/core": "^2.10.2",
     "@prisma/client": "^4.3.1",
     "@schematics/angular": "^14.2.3",
@@ -72,7 +72,7 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "typescript": "~4.7.2",
+    "typescript": "4.8.4",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -83,33 +83,33 @@
     "@angular/language-service": "~14.2.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
-    "@nrwl/cli": "14.7.0",
-    "@nrwl/cypress": "14.7.0",
-    "@nrwl/eslint-plugin-nx": "14.7.0",
-    "@nrwl/jest": "14.7.0",
-    "@nrwl/linter": "14.7.0",
-    "@nrwl/nest": "14.7.0",
-    "@nrwl/workspace": "14.7.0",
+    "@nrwl/cli": "15.9.2",
+    "@nrwl/cypress": "15.9.2",
+    "@nrwl/eslint-plugin-nx": "15.9.2",
+    "@nrwl/jest": "15.9.2",
+    "@nrwl/linter": "15.9.2",
+    "@nrwl/nest": "15.9.2",
+    "@nrwl/workspace": "15.9.2",
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.14",
-    "@types/jest": "28.1.1",
+    "@types/jest": "29.4.4",
     "@types/node": "16.11.7",
     "@types/nodemailer": "^6.4.6",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
-    "@typescript-eslint/eslint-plugin": "~5.33.1",
-    "@typescript-eslint/parser": "~5.33.1",
+    "@typescript-eslint/eslint-plugin": "5.36.1",
+    "@typescript-eslint/parser": "5.36.1",
     "concurrently": "^7.4.0",
-    "cypress": "^10.7.0",
+    "cypress": "^12.2.0",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
-    "jest": "28.1.1",
-    "jest-environment-jsdom": "28.1.1",
+    "jest": "29.4.3",
+    "jest-environment-jsdom": "29.4.3",
     "jest-preset-angular": "~12.2.0",
-    "nx": "14.7.0",
+    "nx": "15.9.2",
     "prettier": "^2.6.2",
-    "ts-jest": "28.0.5",
+    "ts-jest": "29.0.5",
     "ts-node": "10.9.1"
   }
 }
