--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
     "@nestjs/serve-static": "^3.0.0",
     "@nestjs/throttler": "^3.1.0",
     "@nrwl/angular": "15.9.2",
-    "@nrwl/node": "15.9.2",
     "@nrwl/nx-cloud": "15.3.5",
     "@popperjs/core": "^2.10.2",
     "@prisma/client": "^4.3.1",
@@ -72,7 +71,7 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "typescript": "4.8.4",
+    "typescript": "~4.8.4",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -87,13 +86,15 @@
     "@nrwl/cypress": "15.9.2",
     "@nrwl/eslint-plugin-nx": "15.9.2",
     "@nrwl/jest": "15.9.2",
+    "@nrwl/js": "15.9.2",
     "@nrwl/linter": "15.9.2",
     "@nrwl/nest": "15.9.2",
+    "@nrwl/node": "15.9.2",
     "@nrwl/workspace": "15.9.2",
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.14",
     "@types/jest": "29.4.4",
-    "@types/node": "16.11.7",
+    "@types/node": "~18.7.1",
     "@types/nodemailer": "^6.4.6",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
@@ -106,6 +107,7 @@
     "eslint-plugin-cypress": "^2.10.3",
     "jest": "29.4.3",
     "jest-environment-jsdom": "29.4.3",
+    "jest-environment-node": "^29.4.1",
     "jest-preset-angular": "~12.2.0",
     "nx": "15.9.2",
     "prettier": "^2.6.2",
