--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "concurrently -p=\"{name}\" -n=\"Angular,NestJS\" -c=\"green,blue\" \"npm run start:front\" \"npm run start:api\"",
     "build": "npx nx run-many --target=build --projects=front,api && node tools/setAngularEnv.js",
     "test": "nx test",
-    "documentation:serve": "npx @compodoc/compodoc -p tsconfig.json --serve",
+    "documentation:serve": "npx @compodoc/compodoc -p tsconfig.base.json --serve",
     "lint": "nx run-many --all --target=lint --fix",
     "start": "nx serve",
     "start:front": "npx nx serve --host=0.0.0.0",
@@ -112,10 +112,10 @@
     "jest-environment-jsdom": "29.4.3",
     "jest-environment-node": "^29.4.1",
     "jest-preset-angular": "~12.2.0",
-    "jsdoc": "^4.0.2",
     "nx": "15.9.2",
     "prettier": "^2.6.2",
     "ts-jest": "29.0.5",
-    "ts-node": "10.9.1"
+    "ts-node": "10.9.1",
+    "tsdoc": "^0.0.4"
   }
 }
