Add build action

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "ng": "nx",
     "generate": "npx prisma generate",
     "migrate": "npx prisma migrate deploy",
-    "build": "npx nx run-many --target=build --projects=front,api && node tools/setAngularEnv.js",
+    "build": "npx nx run-many --target=build --projects=front,api",
+    "setEnv": "node tools/setAngularEnv.js",
     "test": "nx test",
     "documentation:serve": "npx @compodoc/compodoc -p tsconfig.base.json --serve",
     "lint": "nx run-many --all --target=lint --fix",
