--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,7 @@ jobs:
         run: |
           npm install --legacy-peer-deps
           npm run generate
+          npm run setEnv
 
       - name: Nx build and lint
         run: |
