Move to new env variable system

--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,7 @@ REDIS_PORT=
 REDIS_USERNAME=
 REDIS_PASSWORD=
 
+
 # ---
 # Everything past this line is optional
 # ---
@@ -39,5 +40,5 @@ SSL_KEY_BASE64=
 SSL_CERT_BASE64=
 
 # Recaptcha site key and secret key
-RECAPTCHA_SITE=
-RECAPTCHA_SECRET=
+SCHOLARSOME_RECAPTCHA_SITE=
+SCHOLARSOME_RECAPTCHA_SECRET=
