--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "ng": "nx",
     "generate": "npx prisma generate",
     "migrate": "npx prisma migrate deploy",
-    "build": "node tools/setAngularEnv.js && npx nx run-many --target=build --projects=front,api",
-    "setEnv": "node tools/setAngularEnv.js",
+    "build": "npx nx run-many --target=build --projects=front,api",
     "test": "nx test",
     "documentation:serve": "npx @compodoc/compodoc -p tsconfig.base.json --serve",
     "lint": "nx run-many --all --target=lint --fix",
@@ -15,14 +14,14 @@
     "start:front": "npx nx serve --host=0.0.0.0",
     "start:api": "npx nx serve api",
     "start:dev": "concurrently -p=\"{name}\" -n=\"Angular,NestJS\" -c=\"green,blue\" \"npm run start:front\" \"npm run start:api\"",
-    "serve:node": "npm run migrate && node tools/setAngularEnv.js && node dist/apps/api/main.js",
-    "serve:pm2": "npm run migrate && node tools/setAngularEnv.js && pm2 start dist/apps/api/main.js --name \"scholarsome\""
+    "serve:node": "npm run migrate && node dist/apps/api/main.js",
+    "serve:pm2": "npm run migrate && pm2 start dist/apps/api/main.js --name \"scholarsome\""
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/architect": "^0.1600.0",
+    "@angular-devkit/architect": "^0.1502.8",
     "@angular-devkit/build-angular": "~14.2.0",
-    "@angular-devkit/core": "^16.0.0",
+    "@angular-devkit/core": "^15.2.4",
     "@angular/animations": "~14.2.0",
     "@angular/cdk": "^14.2.2",
     "@angular/common": "~14.2.0",
@@ -50,6 +49,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/serve-static": "^3.0.0",
     "@nestjs/throttler": "^3.1.0",
+    "@ngx-env/builder": "^15.2.1",
     "@nrwl/angular": "15.9.2",
     "@nrwl/nx-cloud": "15.3.5",
     "@popperjs/core": "^2.10.2",
