Change missing recaptcha to not break application and standardize auth API responses

--- a/apps/front/project.json
+++ b/apps/front/project.json
@@ -28,7 +28,8 @@
         "scripts": [],
         "ngxEnv": {
           "prefix": "SCHOLARSOME_"
-        }
+        },
+        "allowedCommonJsDependencies": ["@prisma/client", "class-validator"]
       },
       "configurations": {
         "production": {
