Fix issue with multiple choice and move to standardized api responses

--- a/apps/front/project.json
+++ b/apps/front/project.json
@@ -29,7 +29,7 @@
         "ngxEnv": {
           "prefix": "SCHOLARSOME_"
         },
-        "allowedCommonJsDependencies": ["@prisma/client", "class-validator"]
+        "allowedCommonJsDependencies": ["@prisma/client", "validator"]
       },
       "configurations": {
         "production": {
