Add endpoint for importing study sets

--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "express": "^4.18.2",
     "ioredis": "^5.3.1",
     "jwt-decode": "^3.1.2",
+    "nest-puppeteer": "^1.1.1",
     "ng-recaptcha": "^10.0.0",
     "ngx-bootstrap": "^9.0.0",
     "ngx-cookie": "^6.0.1",
@@ -72,6 +73,7 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "prisma": "^4.3.1",
+    "puppeteer": "^20.2.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
@@ -104,6 +106,7 @@
     "@types/nodemailer": "^6.4.6",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
+    "@types/puppeteer": "^7.0.4",
     "@typescript-eslint/eslint-plugin": "5.36.1",
     "@typescript-eslint/parser": "5.36.1",
     "concurrently": "^7.4.0",
