Rename JWT_TOKEN to JWT_SECRET, modify compose configuration, and update readme

--- a/.env.compose.example
+++ b/.env.compose.example
@@ -1,26 +1,15 @@
-# This is the full environment file, intended for use with development installations
+# This example environment file is for installations that use Docker Compose
 
-# Use production if deploying for use
-NODE_ENV=development
+NODE_ENV=production
 
-# Required if using compose
-# Password to provide for internal database
+# Password to provide for internal databases
 DATABASE_PASSWORD=
-
-# Complete connection URI to MariaDB
-DATABASE_URL=
 
 # Random secret used to validate tokens
 JWT_SECRET=
 
 # Port to expose Scholarsome on
 HTTP_PORT=
-
-# Redis server details
-REDIS_HOST=
-REDIS_PORT=
-REDIS_USERNAME=
-REDIS_PASSWORD=
 
 
 # ---
