--- a/.env.docker.example
+++ b/.env.docker.example
@@ -1,7 +1,6 @@
-# This is the full environment file, intended for use with development installations
+# This example environment file is for installations that use standard Docker containers, and will be supplying their own database credentials
 
-# Use production if deploying for use
-NODE_ENV=development
+NODE_ENV=production
 
 # Required if using compose
 # Password to provide for internal database
