--- a/apps/front/project.json
+++ b/apps/front/project.json
@@ -26,7 +26,9 @@
         "styles": [
           "apps/front/src/styles.scss"
         ],
-        "scripts": [],
+        "scripts": [
+          "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+        ],
         "ngxEnv": {
           "prefix": "SCHOLARSOME_"
         },
