Add head scripts component and env example docs

--- a/.env.compose.example
+++ b/.env.compose.example
@@ -34,3 +34,6 @@ SSL_CERT_BASE64=
 # Recaptcha site key and secret key
 SCHOLARSOME_RECAPTCHA_SITE=
 SCHOLARSOME_RECAPTCHA_SECRET=
+
+# Additional scripts to be placed on the head of every page encoded in base64
+SCHOLARSOME_HEAD_SCRIPTS_BASE64
