--- a/.env.docker.example
+++ b/.env.docker.example
@@ -44,3 +44,6 @@ SSL_CERT_BASE64=
 # Recaptcha site key and secret key
 SCHOLARSOME_RECAPTCHA_SITE=
 SCHOLARSOME_RECAPTCHA_SECRET=
+
+# Additional scripts to be placed on the head of every page encoded in base64
+SCHOLARSOME_HEAD_SCRIPTS_BASE64
