Add code of conduct, contributing, security, and update test name in docker workflow

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -13,7 +13,7 @@ jobs:
         uses: lewagon/wait-on-check-action@v1.3.1
         with:
           ref: ${{ github.ref }}
-          check-name: 'Build test'
+          check-name: 'Run tests'
           repo-token: ${{ secrets.WAIT_TOKEN_GITHUB }}
           wait-interval: 10
 
