Fix duplicate docker jobs

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -4,18 +4,19 @@ on:
     branches: [release]
 
 jobs:
+  pre_job:
+    runs-on: ubuntu-latest
+    outputs:
+      should_skip: ${{ steps.skip_check.outputs.should_skip }}
+    steps:
+      - id: skip_check
+        uses: fkirc/skip-duplicate-actions@v3.4.0
+        with:
+          skip_after_successful_duplicate: 'true'
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-
-      - name: Wait for build test to succeed
-        uses: lewagon/wait-on-check-action@v1.3.1
-        with:
-          ref: ${{ github.ref }}
-          check-name: 'Run tests'
-          repo-token: ${{ secrets.WAIT_TOKEN_GITHUB }}
-          wait-interval: 10
 
       - name: Setup Node.JS
         uses: actions/setup-node@v3
