--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "generate": "npx prisma generate",
     "migrate": "npx prisma migrate deploy",
     "build": "npx nx run-many --target=build --projects=front,api --skip-nx-cache",
+    "build:docs": "npx nx build docs --skip-nx-cache",
     "test": "nx test",
-    "documentation:serve": "npx @compodoc/compodoc -p tsconfig.base.json --serve",
     "lint": "nx run-many --all --target=lint --fix",
     "start": "nx serve",
     "start:front": "npx nx serve --host=0.0.0.0",
@@ -33,12 +33,15 @@
     "@angular/platform-browser": "~14.2.0",
     "@angular/platform-browser-dynamic": "~14.2.0",
     "@angular/router": "~14.2.0",
+    "@docusaurus/core": "2.1.0",
+    "@docusaurus/preset-classic": "2.1.0",
     "@fortawesome/angular-fontawesome": "^0.11.1",
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-brands-svg-icons": "^6.2.0",
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@liaoliaots/nestjs-redis": "^9.0.5",
+    "@mdx-js/react": "^1.6.22",
     "@nestjs-modules/mailer": "^1.8.1",
     "@nestjs/axios": "^0.1.0",
     "@nestjs/common": "^9.0.0",
@@ -59,6 +62,7 @@
     "bootstrap": "^5.2.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "clsx": "^1.2.1",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "ioredis": "^5.3.1",
@@ -69,14 +73,17 @@
     "ngx-cookie": "^6.0.1",
     "ngx-device-detector": "^5.0.1",
     "nodemailer": "^6.8.0",
+    "nx": "15.9.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "prism-react-renderer": "^1.3.5",
     "prisma": "^4.15.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "typescript": "~4.8.4",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -85,7 +92,7 @@
     "@angular-eslint/template-parser": "~14.0.0",
     "@angular/cli": "~14.2.0",
     "@angular/language-service": "~14.2.0",
-    "@compodoc/compodoc": "^1.1.19",
+    "@docusaurus/module-type-aliases": "2.1.0",
     "@golevelup/ts-jest": "^0.3.7",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
@@ -98,6 +105,8 @@
     "@nrwl/nest": "15.9.2",
     "@nrwl/node": "15.9.2",
     "@nrwl/workspace": "15.9.2",
+    "@nx-plus/docusaurus": "^15.0.0-rc.0",
+    "@tsconfig/docusaurus": "^1.0.7",
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.14",
     "@types/jest": "29.4.4",
@@ -118,10 +127,10 @@
     "jest-environment-jsdom": "29.4.3",
     "jest-environment-node": "^29.4.1",
     "jest-preset-angular": "~12.2.0",
-    "nx": "15.9.2",
     "prettier": "^2.6.2",
     "ts-jest": "29.0.5",
     "ts-node": "10.9.1",
-    "tsdoc": "^0.0.4"
+    "tsdoc": "^0.0.4",
+    "typescript": "4.8.4"
   }
 }
