--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,7 +23,7 @@ jobs:
           npm run lint
 
       - name: Build docs
-        run: npm run build:docs
+        run: npx nx build docs --skip-nx-cache
 
       - name: Run tests
         run: npx nx test api
